--- a/pom.xml
+++ b/pom.xml
@@ -82,4 +82,38 @@
     	<version>2.24</version>
     </dependency>
   </dependencies>
+  <!-- repositories> 
+      <repository>
+			<id>nexus</id>
+			<name>Team Nexus Repository</name>
+			<url>http://9.111.100.134:8082/nexus/content/repositories/thirdparty/</url>			
+	   </repository>
+	</repositories -->
+  <build>   
+     <plugins> 		 
+     <!-- Compiler plugin configures the java version to be used for compiling the code -->   
+    <plugin>
+        <inherited>true</inherited>
+  		<groupId>org.apache.maven.plugins</groupId>
+  		<artifactId>maven-compiler-plugin</artifactId>  		
+  		<version>3.3</version>  
+  		<configuration>
+                        <source>1.7</source>
+                        <target>1.7</target>
+        </configuration> 
+       </plugin>  	
+       <!-- Following plugin excutes the testng tests -->
+  	<plugin>
+  		<groupId>org.apache.maven.plugins</groupId>
+  		<artifactId>maven-surefire-plugin</artifactId>
+  		<version>2.18.1</version>
+  		<configuration>
+           <suiteXmlFiles>
+               <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+          </suiteXmlFiles>
+          <testFailureIgnore>true</testFailureIgnore>
+        </configuration> 
+  	</plugin>    	
+    </plugins>
+  </build>
 </project>
